story endpoint: dislike story
